--- a/client/views/index.html
+++ b/client/views/index.html
@@ -19,7 +19,7 @@
 		<button type="submit">Search</button>
 	</form>
 
-	<ul>
+	<ul ng-repeat="roster in teamsController.all">
 		<li>{{player_key}}</li>
 	</ul>
 
