--- a/client/views/index.html
+++ b/client/views/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 
-	<script src="/js/app.js"></script>
-	<script src="/js/controllers/teamsController.js"></script>
+	<script src="../js/app.js"></script>
+	<script src="../js/controllers/teamsController.js"></script>
 
 </head>
 <body ng-controller="TeamsController as teams">
@@ -25,6 +25,35 @@
 	<a ui-sref="show">Player</a>
 
 	<div ui-view></div>
+
+			<script>
+
+			var dataArray = [871,212,812,131];
+
+			var canvas = d3.select("body")
+				.append("svg")
+				.attr("width", 500)
+				.attr("height", 500)
+				.append("g")
+
+			var widthScale = d3.scale.linear()
+				.domain([0,900])
+				.range([0, 500])
+
+			var bars = canvas.selectAll("rect")
+				.data(dataArray)
+				.enter()
+					.append("rect")
+					.attr("width", function(d) {
+						return widthScale(d);
+					})
+					.attr("height", 50)
+					.attr("y", function(d, i) {
+						return i * 100;
+					});
+
+
+		</script>
 
 </body>
 </html>
