--- a/client/views/show.html
+++ b/client/views/show.html
@@ -8,7 +8,7 @@
 	<br/>
 
 	<table class="table table-bordered">
-		<tr>q</tr>
+		<tr>{{teams.player.stats.coverage_value}}</tr>
 		<tr>
 			<td ng-repeat="n in teams.stats">{{teams.category.stat_categories[n.stat_id].display_name}}</td>
 		</tr>
