--- a/client/views/show.html
+++ b/client/views/show.html
@@ -1,5 +1,11 @@
-<main>
+<container>
 
+<div class="jumbotron">
+  <h2>{{teams.player.name.full}}</h2>
+  <br/>
+  <h4>#{{teams.player.uniform_number}} {{teams.player.eligible_positions[0]}} | {{teams.player.editorial_team_full_name}}</h4>
+
+</div>
 	<h1>{{teams.player.name.full}} - {{teams.player.display_position}}, {{teams.player.editorial_team_full_name}}</h1>
 	<br/>
 	<img src="{{teams.player.headshot.url}}">
@@ -17,8 +23,10 @@
 		</tr>
 	</table>
 
+<div>
+	<graph></graph>
 
+</div>
 
-
-</main>
+</container>
 
