search function edited

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -20,7 +20,7 @@
 
 	<form ng-submit="teams.getPlayer()">
 		<input type="text" placeholder="Player name" ng-model="teams.playerName">
-		<button type="submit">Search</button>
+		<input type="submit">
 	</form>
 
 	<a ui-sref="show">Player</a>
