combining 15 and 14 stat calls

--- a/client/views/show.html
+++ b/client/views/show.html
@@ -21,6 +21,12 @@
 		<tr>
 			<td ng-repeat="n in teams.stats">{{n.value}}</td>
 		</tr>
+
+		<tr>2014</tr>
+
+		<tr>
+			<td ng-repeat="n in teams.statsFourteen">{{n.stats.stats.value}}</td>
+		</tr>
 	</table>
 
 <div>
