refactoring show player page

--- a/client/views/show.html
+++ b/client/views/show.html
@@ -19,7 +19,7 @@
 			<td ng-repeat="n in teams.stats">{{teams.category.stat_categories[n.stat_id].display_name}}</td>
 		</tr>
 		<tr>
-			<td ng-repeat="n in teams.stats">{{n.value}}</td>
+			<td ng-repeat="n in teams.stats">{{n.stats.value}}</td>
 		</tr>
 
 		<tr>2014</tr>
