15 and 14 stats now visible

--- a/client/views/show.html
+++ b/client/views/show.html
@@ -19,13 +19,13 @@
 			<td ng-repeat="n in teams.stats">{{teams.category.stat_categories[n.stat_id].display_name}}</td>
 		</tr>
 		<tr>
-			<td ng-repeat="n in teams.stats">{{n.stats.value}}</td>
+			<td ng-repeat="n in teams.stats">{{n.value}}</td>
 		</tr>
 
-		<tr>2014</tr>
+		<tr>{{teams.player.stats.coverage_value}}-1</tr>
 
 		<tr>
-			<td ng-repeat="n in teams.statsFourteen">{{n.stats.stats.value}}</td>
+			<td ng-repeat="n in teams.statsFourteen">{{n.value}}</td>
 		</tr>
 	</table>
 
