link to player show works

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -23,7 +23,7 @@
 		<input type="submit">
 	</form>
 
-	<a ui-sref="show">Player</a>
+	<button ui-sref="show">Player</button>
 
 	<div ui-view></div>
 
