--- a/client/views/show.html
+++ b/client/views/show.html
@@ -1,5 +1,5 @@
 <container>
-
+{{teams.testing}}
 <div class="jumbotron">
   <h2>{{teams.player.name.full}}</h2>
   <br/>
@@ -32,7 +32,7 @@
 		</tr>
 	</table>
 
-<graph class="graph"></graph>
+<graph numbers="team.stats"></graph>
 
 </container>
 
