--- a/client/views/roster.html
+++ b/client/views/roster.html
@@ -1,6 +1,12 @@
 <h1>Players</h1>
 
 	<ul id="roster" ng-repeat="n in teams.allTeams">
-		<li ng-repeat="player in n.players "><img src="{{player.headshot.url}}"> - {{player.name.full}},
-		 {{player.eligible_positions[0]}} - {{player.player_id}}</li>
+		<li ng-repeat="player in n.players ">
+			<img src="{{player.headshot.url}}"> - 
+				<a href="#/show?id={{player.player_id}}" ng-model="playerID" ng-click="teams.setPlayerID(player)">
+					{{player.name.full}},
+					{{player.eligible_positions[0]}} - 
+					{{player.player_id}}
+				</a>
+		</li>
 	</ul>
