--- a/client/views/show.html
+++ b/client/views/show.html
@@ -30,9 +30,13 @@
 			<td>{{teams.player.stats.coverage_value-2}}</td>
 			<td ng-repeat="n in teams.statsThirteen">{{n.value}}</td>
 		</tr>
+
+		
 	</table>
 
-<graph numbers="team.stats"></graph>
+<section>
+
+</section>
 
 </container>
 
