--- a/client/views/roster.html
+++ b/client/views/roster.html
@@ -1,12 +1,27 @@
 <h1>Players</h1>
 
-	<ul id="roster" ng-repeat="n in teams.allTeams">
+<div class="row">
+	<div class="col-sm-3" "col-md-3" ng-repeat="n in teams.allTeams">
+		<div class="thumbnail" ng-repeat="player in n.players ">
+			<img src="{{player.headshot.url}}">
+			<a href="#/show?id={{player.player_id}}" ng-model="playerID" ng-click="teams.setPlayerID(player)">
+			<div class="caption">
+				<h4>{{player.name.full}}</h4>
+				<p>{{player.eligible_positions[0]}} - 
+					{{player.editorial_team_full_name}}</p>
+			</div>
+		</a>
+		</div>
+	</div>
+</div>
+
+<!-- 	<ul id="roster" ng-repeat="n in teams.allTeams">
 		<li ng-repeat="player in n.players ">
 			<img src="{{player.headshot.url}}"> - 
 				<a href="#/show?id={{player.player_id}}" ng-model="playerID" ng-click="teams.setPlayerID(player)">
 					{{player.name.full}},
 					{{player.eligible_positions[0]}} - 
-					{{player.player_id}}
+					{{player.editorial_team_full_name}}
 				</a>
 		</li>
-	</ul>
+	</ul> -->
