--- a/client/views/index.html
+++ b/client/views/index.html
@@ -11,6 +11,7 @@
 	<script src="../js/app.js"></script>
 	<script src="../js/controllers/teamsController.js"></script>
 	<script src="../js/directives/graphView.js"></script>
+	<link rel="stylesheet" type="text/css" href="../css/stylesheet.css">
 
 </head>
 <body ng-controller="TeamsController as teams">
