styling on show page

--- a/client/views/show.html
+++ b/client/views/show.html
@@ -1,11 +1,20 @@
 <container>
 
-<div class="panel panel-default">
+<div class="row">
+	<div class="col-md-2"></div>
+<div class="panel panel-default col-md-8">
 	<div class="panel-body">
-		<h2>{{teams.player.name.full}}</h2>
+		<div class="row>">
+			<div class="col-md-2">
+		<h1>{{teams.player.name.full}}</h1>
 		<br/>
-		<h4>#{{teams.player.uniform_number}} {{teams.player.eligible_positions[0]}} | {{teams.player.editorial_team_full_name}}</h4>
+		<h2>#{{teams.player.uniform_number}} {{teams.player.eligible_positions[0]}} | {{teams.player.editorial_team_full_name}}</h2>
+		</div>
+		<img class="logo" src="https://upload.wikimedia.org/wikipedia/en/7/74/MajorLeagueBaseball.png">
+		</div>
 	</div>
+</div>
+
 </div>
 
 
