--- a/client/views/_graph.html
+++ b/client/views/_graph.html
@@ -1,7 +1,7 @@
 <script>
 var dataArray = [871,212,812,131];
 
-			var canvas = d3.select("div")
+			var canvas = d3.select("graph")
 				.append("svg")
 				.attr("width", 500)
 				.attr("height", 500)
