--- a/client/views/show.html
+++ b/client/views/show.html
@@ -15,36 +15,45 @@
 </div>
 
 <div class="row">
-	<div class="col-md-1 col-lg-1"></div>
+	<div class="col-lg-1"></div>
 		<div class="col-md-10">
-	<img src="{{teams.player.headshot.url}}">
-	
-	<h2>Stats</h2>
-	
+			<img src="{{teams.player.headshot.url}}">
+			
+			<div class="dropdown">
+			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+			    Stats
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+			    <li>2015</li>
+			    <li>2014</li>
+			    <li>2013</li>
+			  </ul>
+			</div>
+			
 
-	<table class="table table-bordered">
-		<tr>
-			<td>Year</td>
-			<td ng-repeat="n in teams.stats">{{teams.category.stat_categories[n.stat_id].display_name}}</td>
-		</tr>
-		<tr>
-			<td>{{teams.player.stats.coverage_value}}</td>
-			<td ng-repeat="n in teams.stats">{{n.value}}</td>
-		</tr>
-		<tr>
-			<td>{{teams.player.stats.coverage_value-1}}</td>
-			<td ng-repeat="n in teams.statsFourteen">{{n.value}}</td>
-		</tr>
-		<tr>
-			<td>{{teams.player.stats.coverage_value-2}}</td>
-			<td ng-repeat="n in teams.statsThirteen">{{n.value}}</td>
-		</tr>
+			<table class="table table-bordered">
+				<tr>
+					<td>Year</td>
+					<td ng-repeat="n in teams.stats">{{teams.category.stat_categories[n.stat_id].display_name}}</td>
+				</tr>
+				<tr>
+					<td>{{teams.player.stats.coverage_value}}</td>
+					<td ng-repeat="n in teams.stats">{{n.value}}</td>
+				</tr>
+				<tr>
+					<td>{{teams.player.stats.coverage_value-1}}</td>
+					<td ng-repeat="n in teams.statsFourteen">{{n.value}}</td>
+				</tr>
+				<tr>
+					<td>{{teams.player.stats.coverage_value-2}}</td>
+					<td ng-repeat="n in teams.statsThirteen">{{n.value}}</td>
+				</tr>
 
-		
-	</table>
+			</table>
 
 			<section>
-
+				<graph numbers="teams.stats"></graph>
 			</section>
 		</div>
 
